@@ -1,82 +1,0 @@
-/* IE5.5/win- only fixes */
-
-#column-content {
-    float: none;
-    margin-left: 0;
-    height: 1%;
-}
-#column-content #content {
-    position: relative;
-    z-index: 5;
-    margin-left: 12.2em;
-    margin-top: 3em;
-    height: 1%;
-}
-#column-one {
-    position: absolute;
-    top: 0;
-    left: 0;
-    z-index: 4;
-    width: 100%;
-}
-#footer {
-    margin-left: 13.6em;
-    border-left: 1px solid #fabd23;
-}
-
-#p-personal {
-	padding-bottom: 0.1em;
-}
-
-body {
-	font-size: xx-small;
-}
-
-#p-cactions {
-    width: 76% !important;
-    z-index: 3 !important;
-    float: none;
-}
-#p-cactions li {
-    padding-bottom: 0 !important;
-    border: none;
-    background-color: transparent;
-    cursor: default;
-    float: none !important;
-}
-#p-cactions li a {
-    display: inline-block !important;
-    vertical-align: top;
-    padding-bottom: 0;
-    border: solid #aaa;
-    border-width: 1px 1px 0;
-}
-#p-cactions li.selected a {
-    border-color: #fabd23;
-    padding-bottom: 0.17em;
-}
-#p-cactions li a:hover {
-    padding-bottom: 0.17em;
-}
-.portlet {
-    overflow:hidden;
-}
-#bodyContent a.external {
-    background: url(external.png) center right no-repeat;
-    padding-right: 13px;
-}
-/* show the hand */
-#p-logo a,
-#p-logo a:hover {
-    cursor: pointer;
-}
-.visualClear {
-    width:90%;
-    height: 1px;
-    padding:0;
-    margin:0;
-}
-
-#editform {
-    width: 100%;
-}
